Code cleanups in android.app.cts.ActivityManagerTest
Fixes: 420664536
Test: atest android.app.cts.ActivityManagerTest
Flag: TEST_ONLY
Change-Id: I6f64f6188cbbb2316ab718b35dfa079120d94cfd